--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /rustprogramming
 /workspaces/spring2026/in_class/target
+/workspaces/spring2026/homework1/target/*
 /in_class
-/workspaces/spring2026/homework1/target
+
+
 
